RenderSVGShape::strokeContains will fail for some strokes https://bugs.webkit.org/show_bug.cgi?id=76931

Patch by Stephen Chenney <schenney@chromium.org> on 2012-02-06
Reviewed by Darin Adler.

Source/WebCore:

Adding support for rounded zero-length endcaps for SVG path hit
testing.

Tests: svg/hittest/zero-length-butt-cap-path.xhtml
       svg/hittest/zero-length-round-cap-path.xhtml
       svg/hittest/zero-length-square-cap-path.xhtml

* rendering/svg/RenderSVGShape.cpp:
(WebCore::RenderSVGShape::strokeContains):

LayoutTests:

New tests for hit testing against an SVG path of zero length with
endcaps.

* svg/hittest/zero-length-butt-cap-path-expected.txt: Added.
* svg/hittest/zero-length-butt-cap-path.xhtml: Added.
* svg/hittest/zero-length-round-cap-path-expected.txt: Added.
* svg/hittest/zero-length-round-cap-path.xhtml: Added.
* svg/hittest/zero-length-square-cap-path-expected.txt: Added.
* svg/hittest/zero-length-square-cap-path.xhtml: Added.

Canonical link: https://commits.webkit.org/94800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106882 268f45cc-cd09-0410-ab3c-d52691b4dbfc